refactor: use Yii REST infrastructure for users
